buxfix: Исправлена логика обработок ошибок, исправлен метод отмены исходящей заявки
